half a code about bar plots

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 136,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -49,6 +49,7 @@
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
     "import datetime\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import geopandas as gpd\n"
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 137,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
@@ -98,11 +99,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "bf8fabfe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Greenhouse gasses</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>-480.47</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-334.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>-9,365.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-9,405.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Czechia</td>\n",
+       "      <td>7,778.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11,267.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2,953.37</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3,101.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>-6,822.26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,196.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Estonia</td>\n",
+       "      <td>1,149.49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2,509.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>6,657.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7,042.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Greece</td>\n",
+       "      <td>-5,400.73</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5,416.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>-45,229.39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-44,094.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>-18,226.97</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21,621.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>-5,735.84</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5,666.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>-41,837.02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-32,544.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>-297.04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-298.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Latvia</td>\n",
+       "      <td>-2,292.90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>801.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>-5,882.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-6,636.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>-363.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-447.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>-5,388.05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-7,109.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Malta</td>\n",
+       "      <td>5.72</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>4,175.89</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,142.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>2,132.47</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5,222.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>-18,294.50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-18,957.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>-4,498.54</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4,707.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>-48,222.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-50,406.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>-3,344.82</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3,142.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Slovakia</td>\n",
+       "      <td>-5,514.80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-7,695.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>-6,716.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-9,112.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>-38,255.64</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-41,286.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>9,410.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9,421.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>-15,288.86</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-19,172.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>-1,766.42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1,426.68</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Greenhouse gasses        2020  Unnamed: 2        2019\n",
+       "0            Belgium     -480.47         NaN      -334.9\n",
+       "1           Bulgaria   -9,365.55         NaN   -9,405.54\n",
+       "2            Czechia    7,778.07         NaN   11,267.85\n",
+       "3            Denmark    2,953.37         NaN    3,101.71\n",
+       "4            Germany   -6,822.26         NaN    4,196.84\n",
+       "5            Estonia    1,149.49         NaN    2,509.07\n",
+       "6            Ireland    6,657.07         NaN    7,042.45\n",
+       "7             Greece   -5,400.73         NaN   -5,416.18\n",
+       "8              Spain  -45,229.39         NaN  -44,094.76\n",
+       "9             France  -18,226.97         NaN  -21,621.85\n",
+       "10           Croatia   -5,735.84         NaN   -5,666.79\n",
+       "11             Italy  -41,837.02         NaN  -32,544.72\n",
+       "12            Cyprus     -297.04         NaN     -298.54\n",
+       "13            Latvia   -2,292.90         NaN      801.49\n",
+       "14         Lithuania   -5,882.69         NaN   -6,636.06\n",
+       "15        Luxembourg     -363.59         NaN     -447.65\n",
+       "16           Hungary   -5,388.05         NaN   -7,109.55\n",
+       "17             Malta        5.72         NaN        8.28\n",
+       "18       Netherlands    4,175.89         NaN    4,142.38\n",
+       "19           Austria    2,132.47         NaN   -5,222.20\n",
+       "20            Poland  -18,294.50         NaN  -18,957.85\n",
+       "21          Portugal   -4,498.54         NaN   -4,707.12\n",
+       "22           Romania  -48,222.60         NaN  -50,406.76\n",
+       "23          Slovenia   -3,344.82         NaN   -3,142.73\n",
+       "24          Slovakia   -5,514.80         NaN   -7,695.33\n",
+       "25           Finland   -6,716.30         NaN   -9,112.97\n",
+       "26            Sweden  -38,255.64         NaN  -41,286.62\n",
+       "27           Iceland    9,410.69         NaN    9,421.15\n",
+       "28            Norway  -15,288.86         NaN  -19,172.68\n",
+       "29       Switzerland   -1,766.42         NaN   -1,426.68"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_GHG"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,6 +410,51 @@
    "metadata": {},
    "source": [
     "Peak finding. Check of common peaks between data sets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ce0d4d0",
+   "metadata": {},
+   "source": [
+    "2. Which substance's emissions decreased the most GHG, PM10, PM2.5 or NOx?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "29ff711f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Neither the `x` nor `y` variable appears to be numeric.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\HHapp\\Downloads\\Python GroupProject\\TIL6010-GroupProject-2\\GroupProject-Layout.ipynb Cell 14\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-2/GroupProject-Layout.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Creating a bar plot of a column against another column\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-2/GroupProject-Layout.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# Assuming you want to plot 'values' against 'categories'\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-2/GroupProject-Layout.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sns\u001b[39m.\u001b[39mbarplot(x\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mGreenhouse gasses\u001b[39m\u001b[39m'\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m2020\u001b[39m\u001b[39m'\u001b[39m, data\u001b[39m=\u001b[39mdf_GHG)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-2/GroupProject-Layout.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Adding title and labels\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-2/GroupProject-Layout.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mtitle(\u001b[39m'\u001b[39m\u001b[39mBar Plot of GHG\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\HHapp\\anaconda3\\envs\\TIL6022\\Lib\\site-packages\\seaborn\\categorical.py:2755\u001b[0m, in \u001b[0;36mbarplot\u001b[1;34m(data, x, y, hue, order, hue_order, estimator, errorbar, n_boot, units, seed, orient, color, palette, saturation, width, errcolor, errwidth, capsize, dodge, ci, ax, **kwargs)\u001b[0m\n\u001b[0;32m   2752\u001b[0m \u001b[39mif\u001b[39;00m estimator \u001b[39mis\u001b[39;00m \u001b[39mlen\u001b[39m:\n\u001b[0;32m   2753\u001b[0m     estimator \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39msize\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 2755\u001b[0m plotter \u001b[39m=\u001b[39m _BarPlotter(x, y, hue, data, order, hue_order,\n\u001b[0;32m   2756\u001b[0m                       estimator, errorbar, n_boot, units, seed,\n\u001b[0;32m   2757\u001b[0m                       orient, color, palette, saturation,\n\u001b[0;32m   2758\u001b[0m                       width, errcolor, errwidth, capsize, dodge)\n\u001b[0;32m   2760\u001b[0m \u001b[39mif\u001b[39;00m ax \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2761\u001b[0m     ax \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mgca()\n",
+      "File \u001b[1;32mc:\\Users\\HHapp\\anaconda3\\envs\\TIL6022\\Lib\\site-packages\\seaborn\\categorical.py:1530\u001b[0m, in \u001b[0;36m_BarPlotter.__init__\u001b[1;34m(self, x, y, hue, data, order, hue_order, estimator, errorbar, n_boot, units, seed, orient, color, palette, saturation, width, errcolor, errwidth, capsize, dodge)\u001b[0m\n\u001b[0;32m   1525\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, x, y, hue, data, order, hue_order,\n\u001b[0;32m   1526\u001b[0m              estimator, errorbar, n_boot, units, seed,\n\u001b[0;32m   1527\u001b[0m              orient, color, palette, saturation, width,\n\u001b[0;32m   1528\u001b[0m              errcolor, errwidth, capsize, dodge):\n\u001b[0;32m   1529\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Initialize the plotter.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1530\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mestablish_variables(x, y, hue, data, orient,\n\u001b[0;32m   1531\u001b[0m                              order, hue_order, units)\n\u001b[0;32m   1532\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mestablish_colors(color, palette, saturation)\n\u001b[0;32m   1533\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mestimate_statistic(estimator, errorbar, n_boot, seed)\n",
+      "File \u001b[1;32mc:\\Users\\HHapp\\anaconda3\\envs\\TIL6022\\Lib\\site-packages\\seaborn\\categorical.py:544\u001b[0m, in \u001b[0;36m_CategoricalPlotter.establish_variables\u001b[1;34m(self, x, y, hue, data, orient, order, hue_order, units)\u001b[0m\n\u001b[0;32m    541\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(err)\n\u001b[0;32m    543\u001b[0m \u001b[39m# Figure out the plotting orientation\u001b[39;00m\n\u001b[1;32m--> 544\u001b[0m orient \u001b[39m=\u001b[39m infer_orient(\n\u001b[0;32m    545\u001b[0m     x, y, orient, require_numeric\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrequire_numeric\n\u001b[0;32m    546\u001b[0m )\n\u001b[0;32m    548\u001b[0m \u001b[39m# Option 2a:\u001b[39;00m\n\u001b[0;32m    549\u001b[0m \u001b[39m# We are plotting a single set of data\u001b[39;00m\n\u001b[0;32m    550\u001b[0m \u001b[39m# ------------------------------------\u001b[39;00m\n\u001b[0;32m    551\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m y \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    552\u001b[0m \n\u001b[0;32m    553\u001b[0m     \u001b[39m# Determine where the data are\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\HHapp\\anaconda3\\envs\\TIL6022\\Lib\\site-packages\\seaborn\\_oldcore.py:1632\u001b[0m, in \u001b[0;36minfer_orient\u001b[1;34m(x, y, orient, require_numeric)\u001b[0m\n\u001b[0;32m   1630\u001b[0m \u001b[39melif\u001b[39;00m require_numeric \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mnumeric\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (x_type, y_type):\n\u001b[0;32m   1631\u001b[0m     err \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNeither the `x` nor `y` variable appears to be numeric.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1632\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(err)\n\u001b[0;32m   1634\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1635\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mv\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Neither the `x` nor `y` variable appears to be numeric."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Creating a bar plot of a column against another column\n",
+    "# Assuming you want to plot 'values' against 'categories'\n",
+    "sns.barplot(x='Greenhouse gasses', y='2020', data=df_GHG)\n",
+    "\n",
+    "# Adding title and labels\n",
+    "plt.title('Bar Plot of GHG')\n",
+    "plt.xlabel('Categories')\n",
+    "plt.ylabel('Values')\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n"
    ]
   },
   {
