changed a few small names

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -450,8 +450,8 @@
     "\n",
     "# Adding title and labels\n",
     "plt.title('Bar Plot of GHG')\n",
-    "plt.xlabel('Categories')\n",
-    "plt.ylabel('Values')\n",
+    "plt.xlabel('Countries')\n",
+    "plt.ylabel('Emissions of GHG')\n",
     "\n",
     "# Display the plot\n",
     "plt.show()\n"
