updated the layout a bit

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 153,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 154,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 155,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "29       Switzerland   -1,766.42         NaN   -1,426.68"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,11 +389,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "58d6a189",
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "133cd3be",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " "
+    "#time to filter the imported data. Delete the empty column, switch the columns in chronological orders.\n"
    ]
   },
   {
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 157,
    "id": "29ff711f",
    "metadata": {},
    "outputs": [
