--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -10,10 +10,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb65c07",
+   "id": "6049d99d",
    "metadata": {},
    "source": [
-    "here comes info about the assignment"
+    "Research question:\n",
+    "\n",
+    "What was the effect of COVID-19 on transport emission levels in Europe, comparing the pre-pandemic period with the pandemic period?\n",
+    "\n",
+    "Sub-questions:\n",
+    "1. Among CO2, PM10, PM2.5, and NOx emissions, which substance experienced the most substantial decline during the pandemic?\n",
+    "2. Which European countries exhibited the most significant and least significant differences in transport-related emissions due to the pandemic?\n",
+    "3. Are variations in the effect of COVID-19 on transportation emissions correlated with a country's GDP?"
    ]
   },
   {
@@ -22,14 +29,6 @@
    "metadata": {},
    "source": [
     "## Import libraries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16004f15",
-   "metadata": {},
-   "source": [
-    "here come all the imported libraries"
    ]
   },
   {
@@ -404,18 +403,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd80a2e5",
+   "id": "5ce0d4d0",
    "metadata": {},
    "source": [
-    "Peak finding. Check of common peaks between data sets. "
+    "#### 1. Among CO2, PM10, PM2.5, and NOx emissions, which substance experienced the most substantial decline during the pandemic?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ce0d4d0",
+   "id": "256c1e9f",
    "metadata": {},
    "source": [
-    "2. Which substance's emissions decreased the most GHG, PM10, PM2.5 or NOx?"
+    "#### 2. Which European countries exhibited the most significant and least significant differences in transport-related emissions due to the pandemic?"
    ]
   },
   {
@@ -596,7 +595,7 @@
    "id": "2e878b93",
    "metadata": {},
    "source": [
-    "2. Which substance's emissions decreased the most GHG, PM10, PM2.5 or NOx?"
+    "#### 3. Are variations in the effect of COVID-19 on transportation emissions correlated with a country's GDP?"
    ]
   },
   {
