--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -5,7 +5,22 @@
    "id": "1e599c74",
    "metadata": {},
    "source": [
-    "# Assignment"
+    "# Project - Group 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Members:**\n",
+    "\n",
+    "* Andreas Chrysostomou - 5957273\n",
+    "* Harpeet Singh - 4870654\n",
+    "* Lise van Dijk - 4850580\n",
+    "* Ralf Hardy - 5348684\n",
+    "* Sara Jacobs - 4837193\n",
+    "\n",
+    "**Github:** https://github.com/HHappy7/TIL6010-GroupProject.git"
    ]
   },
   {
@@ -13,14 +28,20 @@
    "id": "6049d99d",
    "metadata": {},
    "source": [
-    "Research question:\n",
+    "## Introduction and Research Objective:\n",
     "\n",
-    "What was the effect of COVID-19 on transport emission levels in Europe, comparing the pre-pandemic period with the pandemic period?\n",
+    "The COVID-19 pandemic brought about profound changes in our daily lives. One significant impact that the pandemic had was on transportation. As the world grappled with lockdowns and quarantines, people moved less, and travel patterns shifted. This research aims to investigate the effects of COVID-19 on transportation emission levels in Europe, by answering the following **research question:** \n",
     "\n",
-    "Sub-questions:\n",
-    "1. Among CO2, PM10, PM2.5, and NOx emissions, which substance experienced the most substantial decline during the pandemic?\n",
-    "2. Which European countries exhibited the most significant and least significant differences in transport-related emissions due to the pandemic?\n",
-    "3. Are variations in the effect of COVID-19 on transportation emissions correlated with a country's GDP?"
+    "*\"What was the effect of COVID-19 on transport emission levels in Europe, comparing the pre-pandemic period with the pandemic period?\"*\n",
+    "\n",
+    "To comprehensively address this question, we have formulated the following **sub-questions:**\n",
+    "1. *Among CO2, PM10, PM2.5, and NOx emissions, which substance experienced the most substantial decline during the pandemic?*\n",
+    "2. *Which European countries exhibited the most significant and least significant differences in transport-related emissions due to the pandemic?*\n",
+    "3. *Are variations in the effect of COVID-19 on transportation emissions related to a country's GDP?*\n",
+    "\n",
+    "To achieve this, we will employ a methodical approach. We will analyze datasets containing annual transportation emission levels for European countries, focusing on the years 2019 and 2020. By computing the differences in emissions during these two pivotal years, we aim to discern the specific influence of the pandemic.\n",
+    "\n",
+    "Furthermore, the culmination of our research will be the development of an online interactive dashboard. This innovative tool will enable us to visually represent the impact of COVID-19 on transportation emissions across European countries. Through the creation of a dynamic European map that highlights these emission differences, we aim to offer a comprehensive and accessible overview of the pandemic's effects on Europe's transportation landscape.\n"
    ]
   },
   {
@@ -28,12 +49,12 @@
    "id": "664cd6b4",
    "metadata": {},
    "source": [
-    "## Import libraries"
+    "## Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 284,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -127,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +158,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +240,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +270,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +354,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +377,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +400,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,6 +409,46 @@
     "from IPython.display import Image\n",
     "\n",
     "Image('ScatterGDPGHG.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contribution Statement\n",
+    "\n",
+    "**Andreas Chrysostomou:**\n",
+    "\n",
+    "**Harpeet Singh:**\n",
+    "\n",
+    "**Lise van Dijk:**\n",
+    "\n",
+    "**Ralf Hardy:** \n",
+    "* Finding the correct datasets for the research. \n",
+    "* Filtering the data for sub-question 2 and 3.\n",
+    "* Creating the vizualisations for sub-question 2 and 3.\n",
+    "* Writing of explanations regarding sub-question 2 and 3.\n",
+    "* Creating and designing the final report lay-out.\n",
+    "\n",
+    "**Sara Jacobs:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Sources\n",
+    "\n",
+    "* GHG data link\n",
+    "\n",
+    "* GDP data link"
    ]
   }
  ],
