--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 319,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,9 +446,15 @@
    "source": [
     "## Data Sources\n",
     "\n",
-    "* GHG data link\n",
+    "* NOx emissions data from the Eurostat database:\n",
     "\n",
-    "* GDP data link"
+    "* PM2.5 emissions data from the Eurostat database:\n",
+    "\n",
+    "* PM10 emissions data from the Eurostat database: \n",
+    "\n",
+    "* GHG emissions data from the Eurostat database: https://ec.europa.eu/eurostat/web/products-datasets/-/sdg_13_10\n",
+    "\n",
+    "* GDP per capita data from the Eurostat database: https://ec.europa.eu/eurostat/web/products-datasets/-/sdg_08_10"
    ]
   }
  ],
