Minor changes entire document

--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -149,7 +149,11 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+        "hide-output"
+    ]
+},
    "outputs": [
     {
      "data": {
