--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 447,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -148,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 448,
    "metadata": {
     "tags": [
-        "hide-output"
+     "hide-output"
     ]
-},
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +162,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,12 +229,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "uitleg"
+    "As shown in the figure below (*GHG for 2019 and 2020*) there is a wide variety of GreenHouse Gas emissions within Europe. Obviusly, smaller countries such as Cyprus or Malta have much lower levels of GHG emissions. It can be seen nonetheless that the emissions of all countries decreased comparing the pandemic year 2020 with the pre-pandemic year 2019. \\\n",
+    "\\\n",
+    "There are several noteworthy observation to be mentioned. Firstly, the greenhouse gasses of Germany are extremely high compared to other large European countries. Besides that Romania has relatively low emission levels, when taking into account that their population is bigger than the Netherlands, Czechia and Belgium."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +246,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,12 +261,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "uitleg"
+    "The figure shown below (*Difference in GHG Emissions 2019/2020*) visualizes for each country the difference in their greenhouse gas emissions between the pandemic year 2020 and the pre-pandemic year 2019. \\\n",
+    "\\\n",
+    "It can be observed in the figure, that defining the variation in greenhouse gas emissions for each European country between the pre-pandemic and pandemic year, can be attributed to the concept of relative change. Countries with higher absolute emission values naturally have a greater margin for reduction, and thus, their emissions may register a more noticeable decline. This is due to the fact that a proportionally smaller reduction in absolute emissions for these countries can still translate into a substantial decrease in terms of actual volume. In contrast, countries with initially lower absolute emission values might experience a significant percentage decrease but contribute less to the overall reduction in greenhouse gas emissions. Therefore, the magnitude of decline is influenced by the baseline emissions of each country.\\\n",
+    "\\\n",
+    "The results also show that Spain has a more noticable decline in emissions in comparison to the other so-called 'big polluters'. It can be seen that Spain has a greater decrease due to the Covid-19 pandemic than France, Italy and Poland. This is quite noteworthy because these three countries have higher absolute greenhouse gas emissions. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +280,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +294,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Afterall, the countries with the most significant difference in emissions are the bigger European countries, such as Germany and Spain. The smaller countries Switzerland and Estionia had also a quite noticeable decline. \\\n",
+    "\\\n",
+    "Lithuania and Malta are the two countries with an extremely low difference in emissions and are therefore the countries with the least siginificant difference in greenhouse gas emission between te pandemic year 2020 and the pre-pandemic year 2019."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +368,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +391,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 452,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +414,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 453,
      "metadata": {},
      "output_type": "execute_result"
     }
