Contribution report updated

--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -441,6 +441,11 @@
     "**Andreas Chrysostomou:**\n",
     "\n",
     "**Harpeet Singh:**\n",
+    "* Setting up the Github Repository.\n",
+    "* Finding the correct datasets for the research. \n",
+    "* Filtering the data for sub-question 1.\n",
+    "* Creating the vizualisations for sub-question 1.\n",
+    "* Writing of explanations regarding sub-question 1.\n",
     "\n",
     "**Lise van Dijk:**\n",
     "\n",
@@ -488,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
