Updating contribution report

--- a/GroupProject-Layout2.ipynb
+++ b/GroupProject-Layout2.ipynb
@@ -439,6 +439,10 @@
     "## Contribution Statement\n",
     "\n",
     "**Andreas Chrysostomou:**\n",
+    "* Finding the correct datasets for the research. \n",
+    "* Filtering the data for sub-question 1.\n",
+    "* Creating the vizualisations for sub-question 1.\n",
+    "* Writing of explanations regarding sub-question 1.\n",
     "\n",
     "**Harpeet Singh:**\n",
     "* Setting up the Github Repository.\n",
