changed conclusion explanations

--- a/Final_document.ipynb
+++ b/Final_document.ipynb
@@ -373,7 +373,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion research question"
+    "## Conclusion research question\n",
+    "*What was the effect of COVID-19 on transport emission levels in Europe, comparing the pre-pandemic period with the pandemic period?*\\\n",
+    "\\\n",
+    "This research question can be answerd by answering the sub-questions. This is why the conclusions of the different sub-questions also contribute to the conclusion of the research question.  "
    ]
   },
   {
