--- a/Final_document.ipynb
+++ b/Final_document.ipynb
@@ -97,10 +97,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Emissions of various pollutants decreased significantly in the European Union (EU) countries during the COVID-19 pandemic. CO2 emissions, primarily associated with the use of fossil fuels, noticeably dropped due to lockdown measures and reduced transport activity. Similarly,pandemic restrictions led to a significant decrease in PM10, PM2.5 and NOx levels in the air.\n",
+    "Emissions of various pollutants decreased significantly in the European Union (EU) countries during the COVID-19 pandemic. CO2 emissions, primarily associated with the use of fossil fuels, noticeably dropped due to lockdown measures and reduced transport activity. Similarly,    pandemic restrictions led to a significant decrease in PM10, PM2.5 and NOx levels in the air.\n",
     "Subquestion 1 endeavors to identify which of the specified pollutants (CO2, PM10, PM2.5) or NOx emissions demonstrated the most notable decrease during the pandemic in EU countries.\\\n",
     "\\\n",
-    "All data regarding emissions were found through European Statistical Office (Eurostat). These datasets needed to be filtered because of additional countries and additional years. First the total value of all differrent emissions for 2019 and 2020 for all European Union Countries.Countries that are not part of European Union were filtered out of the processed data. The specific on how the the data is imported, filtered and processed can be found in the 'Filter subquestion 1' file. "
+    "All data regarding emissions were found through European Statistical Office (Eurostat). These datasets needed to be filtered because of additional countries and additional years. First the total value of all differrent emissions for 2019 and 2020 for all European Union Countries.  Countries that are not part of European Union were filtered out of the processed data. The specific on how the the data is imported, filtered and processed can be found in the 'Filter subquestion 1' file. "
    ]
   },
   {
@@ -144,6 +144,13 @@
    "metadata": {},
    "source": [
     "### Conclusion sub-question 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, the bar chart illustrates a downward trend regarding the total emissions of GHG, NOx PM2.5 and PM10 between the two examined years, 2019 and 2020, pre and during COVID-19 era. The most significatn change  was observed in the value of total NOx emissions throughout the examined years. A mild reduction was observed in the emissions of PM2.5 and PM10 from 2019 to 2020 among the European Union countries. Finally, GHG emissions also decreased during the examined pre and during COVID-19 years."
    ]
   },
   {
@@ -420,11 +427,11 @@
    "source": [
     "## Data Sources\n",
     "\n",
-    "* NOx emissions data from the Eurostat database:\n",
+    "* NOx emissions data from the Eurostat database: https://ec.europa.eu/eurostat/databrowser/view/env_air_emis__custom_7911608/default/table\n",
     "\n",
-    "* PM2.5 emissions data from the Eurostat database:\n",
+    "* PM2.5 emissions data from the Eurostat database: https://ec.europa.eu/eurostat/databrowser/view/env_air_emis__custom_7911608/default/table\n",
     "\n",
-    "* PM10 emissions data from the Eurostat database: \n",
+    "* PM10 emissions data from the Eurostat database: https://ec.europa.eu/eurostat/databrowser/view/env_air_emis__custom_7911608/default/table\n",
     "\n",
     "* GHG emissions data from the Eurostat database: https://ec.europa.eu/eurostat/web/products-datasets/-/sdg_13_10\n",
     "\n",
