--- a/Final_document.ipynb
+++ b/Final_document.ipynb
@@ -406,6 +406,11 @@
     "* Writing of explanations regarding sub-question 1.\n",
     "\n",
     "**Lise van Dijk:**\n",
+    "* Finding the correct datasets for the research. \n",
+    "* Filtering the data for sub-question 2 and 3.\n",
+    "* Creating the vizualisations for answering sub-question 2 and 3.\n",
+    "* Writing of explanations regarding sub-question 2 and 3.\n",
+    "* Creating and designing the final report lay-out.\n",
     "\n",
     "**Ralf Hardy:** \n",
     "* Finding the correct datasets for the research. \n",
