--- a/Final_document.ipynb
+++ b/Final_document.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "hide-output"
@@ -128,7 +128,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,13 +417,15 @@
     "* Filtering the data for sub-question 2 and 3.\n",
     "* Creating the vizualisations for sub-question 2 and 3.\n",
     "* Writing of explanations regarding sub-question 2 and 3.\n",
+    "* Elaborating and writing conclusions for sub-question 2 and 3.\n",
+    "* Writing the conclusion of the main research question.\n",
     "* Creating and designing the final report lay-out.\n",
     "\n",
     "**Sara Jacobs:**\n",
     "* Finding the correct datasets for the research. \n",
     "* Creating the vizualisations for sub-question 2 and 3.\n",
     "* Creating structure in the files and Github \n",
-    "* Elaborating and wrinting conclusions for sub-question 2 and 3. "
+    "* Elaborating and writing conclusions for sub-question 2 and 3. "
    ]
   },
   {
@@ -460,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
