Main conclusion + conclusion sub3

--- a/Final_document.ipynb
+++ b/Final_document.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {
     "tags": [
      "hide-output"
@@ -128,7 +128,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall, the bar chart illustrates a downward trend regarding the total emissions of GHG, NOx PM2.5 and PM10 between the two examined years, 2019 and 2020, pre and during COVID-19 era. The most significatn change  was observed in the value of total NOx emissions throughout the examined years. A mild reduction was observed in the emissions of PM2.5 and PM10 from 2019 to 2020 among the European Union countries. Finally, GHG emissions also decreased during the examined pre and during COVID-19 years."
+    "Overall, the bar chart illustrates a downward trend regarding the total emissions of GHG, NOx PM2.5 and PM10 between the two examined years, 2019 and 2020, pre and during COVID-19 era. The most significant change  was observed in the value of total NOx emissions throughout the examined years. A mild reduction was observed in the emissions of PM2.5 and PM10 from 2019 to 2020 among the European Union countries. Finally, GHG emissions also decreased during the examined pre and during COVID-19 years."
    ]
   },
   {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
    "metadata": {},
    "source": [
     "### Sub-question 3: \n",
-    "*Are variations in the effect of COVID-19 on transportation emissions correlated with a country's GDP?*"
+    "*Are variations in the effect of COVID-19 on transportation emissions related to a country's GDP?*"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "metadata": {},
    "source": [
     "#### Part I - Data Import & Part II - Data Processing \n",
-    "For this sub-question we looked into the GDP per country, GDP stands for Gross Domestic Product. In sub-question 1 and 2 are the differences calculated for the emissions in the year 2019 and 2020. In this subquestion will be calculated if the GDP per country changed in these two periods. When this is calculated then we can see if there is a relationship between the changes in pollution and the changes in GDP. \\\n",
+    "For this sub-question we looked into the GDP (per capita) per country, GDP stands for Gross Domestic Product and per capita means the average per inhabitant. GDP data per capita is used to see the GDP of the countries more 'fairly'. In sub-question 1 and 2 are the differences calculated for the emissions in the year 2019 and 2020. In this subquestion will be calculated if the GDP per country changed in these two periods. When this is calculated then we can see if there is a relationship between the changes in pollution and the changes in GDP. \\\n",
     "\\\n",
     "So first, we looked at the GDP of the countries for 2019 versus 2020. Then we took the difference for all those countries between those two years, to see the effect of Covid on the GDP of a country. After this we looked at the relation between the GDP in 2020 and the differences in GHG (20-19) per country. This was done by visualizing it in a scatter plot. \n",
     "\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,9 @@
    "metadata": {},
    "source": [
     "### Conclusion sub-question 3\n",
-    "Conclusion on information about scatterplot and differences GDP"
+    "It can be concluded that there is not an exact relation between the effect of Covid-19 on transportation emissions and the GDP of a country. The results of the scatterplot give a wide variety of combinations in GDP and differences in GHG emissions. Futhermore, it can be concluded that Luxembourg and Ireland, as the countries with the highest GDP's, do not experience major changes in GHG emissions due to Covid-19. \\\n",
+    "\\\n",
+    "So, the research can not determine a clear relation between these two concepts. Further research is needed to gain more insight and knowledge in this field."
    ]
   },
   {
@@ -383,7 +385,13 @@
     "## Conclusion research question\n",
     "*What was the effect of COVID-19 on transport emission levels in Europe, comparing the pre-pandemic period with the pandemic period?*\\\n",
     "\\\n",
-    "This research question can be answerd by answering the sub-questions. This is why the conclusions of the different sub-questions also contribute to the conclusion of the research question.  "
+    "This research question can be answerd by answering the sub-questions. This is why the conclusions of the different sub-questions also contribute to the conclusion of the research question.  \n",
+    "\n",
+    "By considering the results of the research, it can be conclused that there was a significant decline of transport emission levels in Europe due to the Covid-19 pandemic. To begin with one of the most important emissions the greenhouse gasses, these had a quite significant decrease. But, the most significant decline was in the total NOx emissions in Europe. In addition to that also the PM2.5 and PM10 emissions were reduced within Europe. \\\n",
+    "\\\n",
+    "Secondly, Germany and Spain, both one of the biggest European countries, are the countries with the most significant difference in greenhouse gas emissions for the pre-pandemic year 2019 and pandemic year 2020. And the two countries Lithuania and Malta are the ones with the lowest differences in that matter. But, these results are heavily based on the population of a country because of the linear relationship with a country's emissions and their population. Thus, the results can be more precise and usefull if the relative change is presented. Further research is needed to determine these results. \\\n",
+    "\\\n",
+    "Furthermore, it can be concluded from the research that the variations in the effect of COVID-19 on transportation emissions are not related to a country's GDP (per capita). A more in-depth follow-up study could delve more into the connection of these concepts, and is needed to prove a possible relation between the differences in GHG emissions and the GDP per capita of a country.\n"
    ]
   },
   {
