--- a/Filter subquestion 2.ipynb
+++ b/Filter subquestion 2.ipynb
@@ -451,16 +451,16 @@
     }
    ],
    "source": [
-    "df_GDP = df_GDP.rename(columns={'ï»¿TIME': 'Country'})\n",
+    "df_GDP = df_GDP.rename(columns={'ï»¿TIME': 'Country'})    #Creating a more logical name for this column\n",
     "\n",
     "for i in range(2000, 2023):\n",
     "    if i == 2019 or i == 2020:\n",
     "        continue\n",
     "    else:\n",
-    "        df_GDP.drop(str(i), axis=1, inplace=True)\n",
+    "        df_GDP.drop(str(i), axis=1, inplace=True)            #Only focus on the data of pre-pandemic year 2019 and pandemic year 2020\n",
     "\n",
     "for i in range(0, 6):\n",
-    "    df_GDP.drop(i, axis=0, inplace=True)\n",
+    "    df_GDP.drop(i, axis=0, inplace=True)    \n",
     "\n",
     "for i in range(43, 46):\n",
     "    df_GDP.drop(i, axis=0, inplace=True)\n",
