--- a/Filter subquestion 2.ipynb
+++ b/Filter subquestion 2.ipynb
@@ -127,13 +127,13 @@
    "source": [
     "#Filtering GHG data\n",
     "\n",
-    "df_GHG = df_GHG.rename(columns={'ï»¿TIME': 'Country'})\n",
+    "df_GHG = df_GHG.rename(columns={'ï»¿TIME': 'Country'})            #Creating a more logical name for this column\n",
     "\n",
     "for i in range(2012,2022):\n",
     "    if i == 2019 or i == 2020:\n",
     "        continue\n",
     "    else:\n",
-    "        df_GHG.drop(str(i), axis=1, inplace=True)\n",
+    "        df_GHG.drop(str(i), axis=1, inplace=True)                #Only focus on the data of pre-pandemic year 2019 and pandemic year 2020\n",
     "\n",
     "for i in range(0, 2):\n",
     "    df_GHG.drop(i, axis=0, inplace=True)\n",
@@ -457,7 +457,7 @@
     "    if i == 2019 or i == 2020:\n",
     "        continue\n",
     "    else:\n",
-    "        df_GDP.drop(str(i), axis=1, inplace=True)            #Only focus on the data of pre-pandemic year 2019 and pandemic year 2020\n",
+    "        df_GDP.drop(str(i), axis=1, inplace=True)         #Only focus on the data of pre-pandemic year 2019 and pandemic year 2020\n",
     "\n",
     "for i in range(0, 6):\n",
     "    df_GDP.drop(i, axis=0, inplace=True)    \n",
